--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
     "@tailwindcss/aspect-ratio": "^0.2.1",
+    "chart.js": "^3.7.1",
     "next": "^11.1.0",
     "next-themes": "^0.0.14",
     "react": "^17.0.1",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^17.0.1",
     "react-hook-form": "^7.8.3"
   },
